# aviationweatherapi

aviationweatherapi/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
aviationweatherapi/docs/: Makefile  conf.py  example.ipynb  make.bat
aviationweatherapi/src/aviationweatherapi/: __init__.py  average_elevation_by_state.py  aviationweatherapi.py  easy_metar.py  get_airport_info.py  get_airport_metar.py  help_me.py
aviationweatherapi/tests/: test_aviationweatherapi.py
