[tool.poetry]
name = "aviationweatherapi"
version = "0.1.3"
description = "Functions to fetch airports and airfield weather info from Aviation Weather Center API and filter them out."
authors = ["Yixin Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
